src/main/java/com/example/comma/global/error/exception/InvalidValueException.java
package com.example.comma.global.error.exception;


import com.example.comma.global.error.ErrorCode;

public class InvalidValueException extends BusinessException {
    public InvalidValueException() {
        super(ErrorCode.BAD_REQUEST);
    }

    public InvalidValueException(ErrorCode errorCode) {
        super(errorCode);
    }
}